--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@ margin-left: 10px;
 
      <div class="name">Top G</div>
      <div class="about">
-       I am a Profasonal Web Designer
+       I am a Profasonal Web Developer
   </div>
      <div class="social-icons">
        <a href="#" class="gl"><i class="fab fa-youtube"></i></a>
